--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "drei": "^1.5.7",
+    "ml5": "^0.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-dropzone": "^11.2.0",
+    "react-postprocessing": "^1.4.0",
+    "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
+    "react-three-fiber": "^5.0.1",
+    "three": "^0.120.1"
   },
   "scripts": {
     "start": "react-scripts start",
